// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should render 1`] = `
<div
  className="search-bar"
>
  <SearchInput
    expanded={false}
    handleNext={[Function]}
    handlePrev={[Function]}
    hasPrefix={false}
    isLoading={false}
    onChange={[Function]}
    onHistoryScroll={[Function]}
    onKeyDown={[Function]}
    placeholder="Find in file…"
    query=""
    selectedItemId=""
    showClose={false}
    showErrorEmoji={false}
    size=""
    summaryMsg=""
  />
  <div
    className="search-bottom-bar"
  >
    <div
      className="search-modifiers"
    >
      <span
        className="pipe-divider"
      />
      <span
        className="search-type-name"
      >
        Modifiers:
      </span>
      <SearchModBtn
        className="regex-match-btn"
        modVal="regexMatch"
        svgName="regex-match"
        tooltip="Regex"
      />
      <SearchModBtn
        className="case-sensitive-btn"
        modVal="caseSensitive"
        svgName="case-match"
        tooltip="Case sensitive"
      />
      <SearchModBtn
        className="whole-word-btn"
        modVal="wholeWord"
        svgName="whole-word-match"
        tooltip="Whole word"
      />
    </div>
    <React.Fragment>
      <span
        className="pipe-divider"
      />
      <CloseButton
        buttonClass="big"
        handleClick={[Function]}
      />
    </React.Fragment>
  </div>
</div>
`;

exports[`doSearch should complete a search 1`] = `"query"`;

exports[`showErrorEmoji false if no query + no results 1`] = `
<div
  className="search-bar"
>
  <SearchInput
    count={0}
    expanded={false}
    handleNext={[Function]}
    handlePrev={[Function]}
    hasPrefix={false}
    isLoading={false}
    onChange={[Function]}
    onHistoryScroll={[Function]}
    onKeyDown={[Function]}
    placeholder="Find in file…"
    query=""
    selectedItemId=""
    showClose={false}
    showErrorEmoji={false}
    size=""
    summaryMsg=""
  />
  <div
    className="search-bottom-bar"
  >
    <div
      className="search-modifiers"
    >
      <span
        className="pipe-divider"
      />
      <span
        className="search-type-name"
      >
        Modifiers:
      </span>
      <SearchModBtn
        className="regex-match-btn"
        modVal="regexMatch"
        svgName="regex-match"
        tooltip="Regex"
      />
      <SearchModBtn
        className="case-sensitive-btn"
        modVal="caseSensitive"
        svgName="case-match"
        tooltip="Case sensitive"
      />
      <SearchModBtn
        className="whole-word-btn"
        modVal="wholeWord"
        svgName="whole-word-match"
        tooltip="Whole word"
      />
    </div>
    <React.Fragment>
      <span
        className="pipe-divider"
      />
      <CloseButton
        buttonClass="big"
        handleClick={[Function]}
      />
    </React.Fragment>
  </div>
</div>
`;

exports[`showErrorEmoji false if query + results 1`] = `
<div
  className="search-bar"
>
  <SearchInput
    count={10}
    expanded={false}
    handleNext={[Function]}
    handlePrev={[Function]}
    hasPrefix={false}
    isLoading={false}
    onChange={[Function]}
    onHistoryScroll={[Function]}
    onKeyDown={[Function]}
    placeholder="Find in file…"
    query="test"
    selectedItemId=""
    showClose={false}
    showErrorEmoji={false}
    size=""
    summaryMsg="-NaN of 10 results"
  />
  <div
    className="search-bottom-bar"
  >
    <div
      className="search-modifiers"
    >
      <span
        className="pipe-divider"
      />
      <span
        className="search-type-name"
      >
        Modifiers:
      </span>
      <SearchModBtn
        className="regex-match-btn"
        modVal="regexMatch"
        svgName="regex-match"
        tooltip="Regex"
      />
      <SearchModBtn
        className="case-sensitive-btn"
        modVal="caseSensitive"
        svgName="case-match"
        tooltip="Case sensitive"
      />
      <SearchModBtn
        className="whole-word-btn"
        modVal="wholeWord"
        svgName="whole-word-match"
        tooltip="Whole word"
      />
    </div>
    <React.Fragment>
      <span
        className="pipe-divider"
      />
      <CloseButton
        buttonClass="big"
        handleClick={[Function]}
      />
    </React.Fragment>
  </div>
</div>
`;

exports[`showErrorEmoji true if query + no results 1`] = `
<div
  className="search-bar"
>
  <SearchInput
    count={0}
    expanded={false}
    handleNext={[Function]}
    handlePrev={[Function]}
    hasPrefix={false}
    isLoading={false}
    onChange={[Function]}
    onHistoryScroll={[Function]}
    onKeyDown={[Function]}
    placeholder="Find in file…"
    query="test"
    selectedItemId=""
    showClose={false}
    showErrorEmoji={true}
    size=""
    summaryMsg="No results found"
  />
  <div
    className="search-bottom-bar"
  >
    <div
      className="search-modifiers"
    >
      <span
        className="pipe-divider"
      />
      <span
        className="search-type-name"
      >
        Modifiers:
      </span>
      <SearchModBtn
        className="regex-match-btn"
        modVal="regexMatch"
        svgName="regex-match"
        tooltip="Regex"
      />
      <SearchModBtn
        className="case-sensitive-btn"
        modVal="caseSensitive"
        svgName="case-match"
        tooltip="Case sensitive"
      />
      <SearchModBtn
        className="whole-word-btn"
        modVal="wholeWord"
        svgName="whole-word-match"
        tooltip="Whole word"
      />
    </div>
    <React.Fragment>
      <span
        className="pipe-divider"
      />
      <CloseButton
        buttonClass="big"
        handleClick={[Function]}
      />
    </React.Fragment>
  </div>
</div>
`;
